[gd_scene load_steps=12 format=3 uid="uid://dewdyvvv62g8a"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_u4uhp"]
[ext_resource type="Script" path="res://scripts/MainContainer.gd" id="2_q04sg"]
[ext_resource type="Script" path="res://scripts/SettingsButton.gd" id="3_j5sqn"]
[ext_resource type="Script" path="res://scripts/Exit.gd" id="4_wmm2b"]
[ext_resource type="Script" path="res://scripts/settingsPanel.gd" id="5_822hf"]
[ext_resource type="Script" path="res://combat_button.gd" id="5_dm4sk"]
[ext_resource type="Script" path="res://scripts/SettingsMenu.gd" id="6_fipya"]
[ext_resource type="Script" path="res://scripts/ShakeIntensity.gd" id="7_aphuw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ftvw3"]
bg_color = Color(0.0846899, 0.0846899, 0.0846899, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tf1qu"]
bg_color = Color(0.393086, 0.393086, 0.393085, 1)

[sub_resource type="Theme" id="Theme_iflhl"]

[node name="Menu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_u4uhp")

[node name="MainContainer" type="AspectRatioContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_q04sg")

[node name="Control" type="CenterContainer" parent="MainContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MainContainer/Control"]
layout_mode = 2

[node name="PanelContainer" type="Panel" parent="MainContainer/Control/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -541.0
offset_right = 270.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ftvw3")

[node name="mainMenuContainer" type="VBoxContainer" parent="MainContainer/Control/Control/PanelContainer"]
layout_mode = 2
offset_right = 540.0
offset_bottom = 981.818
mouse_filter = 2
alignment = 1

[node name="settingsButton" type="Button" parent="MainContainer/Control/Control/PanelContainer/mainMenuContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_tf1qu")
text = "Settings"
script = ExtResource("3_j5sqn")

[node name="Exit" type="Button" parent="MainContainer/Control/Control/PanelContainer/mainMenuContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_tf1qu")
text = "Exit"
script = ExtResource("4_wmm2b")

[node name="combatButton" type="Button" parent="MainContainer/Control/Control/PanelContainer/mainMenuContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_tf1qu")
text = "Return to Base"
script = ExtResource("5_dm4sk")

[node name="settingsPanel" type="Panel" parent="MainContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
script = ExtResource("5_822hf")

[node name="MenuButton" type="TabBar" parent="MainContainer/settingsPanel"]
layout_mode = 2
offset_right = 1080.0
offset_bottom = 44.0
tab_alignment = 1
clip_tabs = false
tab_count = 2
tab_0/title = "Controls"
tab_1/title = "Graphics"
script = ExtResource("6_fipya")

[node name="Graphics" type="VBoxContainer" parent="MainContainer/settingsPanel"]
layout_mode = 0
offset_top = 40.0
offset_right = 1080.0
offset_bottom = 1080.0
mouse_filter = 2
alignment = 1

[node name="ShakeIntensity" type="HSlider" parent="MainContainer/settingsPanel/Graphics"]
layout_mode = 2
max_value = 300.0
step = 25.0
value = 100.0
tick_count = 13
ticks_on_borders = true
script = ExtResource("7_aphuw")

[node name="RichTextLabel" type="RichTextLabel" parent="MainContainer/settingsPanel/Graphics"]
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_iflhl")
bbcode_enabled = true
text = "[center]Shake[/center]"
fit_content = true
scroll_active = false

[node name="Controls" type="VBoxContainer" parent="MainContainer/settingsPanel"]
layout_mode = 0
offset_top = 40.0
offset_right = 1080.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="."]
z_index = -1
offset_right = 1924.0
offset_bottom = 1083.0
mouse_filter = 2

[connection signal="pressed" from="MainContainer/Control/Control/PanelContainer/mainMenuContainer/settingsButton" to="." method="settings_pressed"]
[connection signal="pressed" from="MainContainer/Control/Control/PanelContainer/mainMenuContainer/settingsButton" to="MainContainer/Control/Control/PanelContainer/mainMenuContainer/settingsButton" method="_on_pressed"]
[connection signal="pressed" from="MainContainer/Control/Control/PanelContainer/mainMenuContainer/settingsButton" to="MainContainer/settingsPanel" method="settings_pressed"]
[connection signal="pressed" from="MainContainer/Control/Control/PanelContainer/mainMenuContainer/Exit" to="MainContainer/Control/Control/PanelContainer/mainMenuContainer/Exit" method="_on_pressed"]
[connection signal="pressed" from="MainContainer/Control/Control/PanelContainer/mainMenuContainer/combatButton" to="MainContainer/Control/Control/PanelContainer/mainMenuContainer/combatButton" method="_on_pressed"]
[connection signal="tab_changed" from="MainContainer/settingsPanel/MenuButton" to="MainContainer/settingsPanel/MenuButton" method="_on_tab_changed"]
[connection signal="drag_ended" from="MainContainer/settingsPanel/Graphics/ShakeIntensity" to="MainContainer/settingsPanel/Graphics/ShakeIntensity" method="_on_drag_ended"]
